fixing typo in CMIP5 jet latitude calculations

--- a/DATASORT/JLAT/outputCMIP5jlat.ipynb
+++ b/DATASORT/JLAT/outputCMIP5jlat.ipynb
@@ -5,12 +5,14 @@
    "metadata": {},
    "source": [
     "Calculates JJA zonal mean jet latitude values for 1979-2014 and 2070-2099 for CMIP5 models.  Outputs both the jet latitude of the ensemble mean zonal mean zonal wind and the jet latitude for the first ensemle member. Concatenates 1979-2005 of the historical simulations with 2005-2014 of the RCP8.5 simulations and uses 2070-2099 of the RCP8.5 simulations.\n",
-    "This code works on a CMIP archive that is internal to the Climate and Global Dynamics Laboratory, NCAR.  If you want to run this on your own archive, you'd need to modify histpath and rcp85path and make sure the directory structure is set up in the right way."
+    "This code works on a CMIP archive that is internal to the Climate and Global Dynamics Laboratory, NCAR.  If you want to run this on your own archive, you'd need to modify histpath and rcp85path and make sure the directory structure is set up in the right way.\n",
+    "\n",
+    "Output is saved to ecpaper2020/DATASORT/JLAT/DATA/jlatcmip5.nc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "histpath=\"/project/cmip5/historical/Amon/\"\n",
     "rcp85path=\"/project/cmip5/rcp85/Amon/\"\n",
     "var=\"ua\"\n",
-    "plevuse=\"70000\""
+    "plevuse=\"70000\"\n",
+    "pathout=\"./DATA\""
    ]
   },
   {
@@ -61,57 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             Model  Nmempast  Nmemfuture specialorderpast specialorderfuture\n",
-      "0        ACCESS1-0         1           1              NaN                NaN\n",
-      "1        ACCESS1-3         1           1              NaN                NaN\n",
-      "2       bcc-csm1-1         1           1              NaN                NaN\n",
-      "3     bcc-csm1-1-m         1           1              NaN                NaN\n",
-      "4          BNU-ESM         1           1              NaN                NaN\n",
-      "5          CanESM2         5           5              NaN                NaN\n",
-      "6            CCSM4         6           6              NaN                NaN\n",
-      "7        CESM1-BGC         1           1              NaN                NaN\n",
-      "8       CESM1-CAM5         3           3              NaN                NaN\n",
-      "9      CESM1-WACCM         1           1            2,3,4              2,3,4\n",
-      "10         CMCC-CM         1           1              NaN                NaN\n",
-      "11        CMCC-CMS         1           1              NaN                NaN\n",
-      "12        CNRM-CM5         5           5       1,2,4,6,10         1,2,4,6,10\n",
-      "13   CSIRO-Mk3-6-0        10          10              NaN                NaN\n",
-      "14        EC-EARTH         1           1                8                  8\n",
-      "15       FGOALS-g2         1           1              NaN                NaN\n",
-      "16         FIO-ESM         3           3              NaN                NaN\n",
-      "17        GFDL-CM3         1           1              NaN                NaN\n",
-      "18      GFDL-ESM2G         1           1              NaN                NaN\n",
-      "19      GFDL-ESM2M         1           1              NaN                NaN\n",
-      "20       GISS-E2-H         2           2              NaN                NaN\n",
-      "21       GISS-E2-R         2           2              NaN                NaN\n",
-      "22      HadGEM2-AO         1           1              NaN                NaN\n",
-      "23      HadGEM2-CC         3           3              NaN                NaN\n",
-      "24      HadGEM2-ES         3           3              NaN                NaN\n",
-      "25          inmcm4         1           1              NaN                NaN\n",
-      "26    IPSL-CM5A-LR         4           4              NaN                NaN\n",
-      "27    IPSL-CM5A-MR         1           1              NaN                NaN\n",
-      "28    IPSL-CM5B-LR         1           1              NaN                NaN\n",
-      "29          MIROC5         3           3              NaN                NaN\n",
-      "30       MIROC-ESM         1           1              NaN                NaN\n",
-      "31  MIROC-ESM-CHEM         1           1              NaN                NaN\n",
-      "32      MPI-ESM-LR         3           3              NaN                NaN\n",
-      "33      MPI-ESM-MR         1           1              NaN                NaN\n",
-      "34       MRI-CGCM3         1           1              NaN                NaN\n",
-      "35       NorESM1-M         1           1              NaN                NaN\n",
-      "36      NorESM1-ME         1           1              NaN                NaN\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cmip5models=pd.read_csv('cmip5csvinfo.csv')\n",
-    "print(cmip5models)\n",
     "\n",
     "ybegp = 1979 ; monbegp = 1 ; yendp = 2014 ; monendp = 12 # dates for Past period\n",
     "ybegf = 2070 ; monbegf = 1 ; yendf = 2099 ; monendf = 12 # dates for Future period\n",
@@ -136,23 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing past for ACCESS1-0 r1i1p1...\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "just checking",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m just checking\n"
+      "Processing past for ACCESS1-0 r1i1p1...\n",
+      "Processing future for ACCESS1-0 r1i1p1...\n",
+      "Processing past for ACCESS1-3 r1i1p1...\n"
      ]
     }
    ],
@@ -229,15 +179,15 @@
     "        changeorder=cmip5models.loc[index,\"specialorderfuture\"]\n",
     "        if (type(changeorder) == str):\n",
     "            changeordernp = np.array(changeorder.split(\",\"))\n",
-    "            memstr=\"r\"+str(changeordermp[imem-1])+\"i1p1\"\n",
+    "            memstr=\"r\"+str(changeordernp[imem-1])+\"i1p1\"\n",
     "            \n",
     "        print(\"Processing future for \"+modname+\" \"+memstr+\"...\")\n",
     "        rcp85di = rcp85path+var+\"/\"+modname+\"/\"+memstr+\"/\"\n",
-    "        u=read.read_zonalmean_1lev(rcp85dir, datebegf,dateendf,plevuse)\n",
+    "        u=read.read_zonalmean_1lev(rcp85dir+\"*.nc\", datebegf,dateendf,plevuse)\n",
     "        \n",
     "        # check the size\n",
     "        if (u.time.size != nmonthsf):\n",
-    "            if (modname==\"HadGEM2-ES\")\n",
+    "            if (modname==\"HadGEM2-ES\"):\n",
     "                u=u.isel(time=slice(0, u.time.size-1)) # taking care of another Hadley center problem\n",
     "            if (u.time.size !=  nmonthsf):\n",
     "                print(\"something's wrong, nmonthsf=\"+str(nmonthsf)+\" but u has size \"+str(u.time.size))\n",
@@ -264,9 +214,9 @@
     "jlatemp.to_netcdf(path=pathout+\"jlatcmip5.nc\")\n",
     "jlatemf.to_netcdf(path=pathout+\"jlatcmip5.nc\", mode=\"a\")\n",
     "jlat1memp.to_netcdf(path=pathout+\"jlatcmip5.nc\", mode=\"a\")\n",
-    "jl\n",
+    "jlat1memf.to_netcdf(path=pathout+\"jlatcmip5.nc\", mode=\"a\")\n",
     "    \n",
-    "    sys.exit(\"just checking\")\n",
+    "print(\"*********************DONE***********************\")\n",
     "    "
    ]
   },
