moved csvinfo, adding final CMIP5 and CMIP6 jlat scripts and outputdata

--- a/DATASORT/JLAT/outputCMIP5jlat.ipynb
+++ b/DATASORT/JLAT/outputCMIP5jlat.ipynb
@@ -52,7 +52,7 @@
     "rcp85path=\"/project/cmip5/rcp85/Amon/\"\n",
     "var=\"ua\"\n",
     "plevuse=\"70000\"\n",
-    "pathout=\"./DATA\""
+    "pathout=\"./DATA/\""
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmip5models=pd.read_csv('cmip5csvinfo.csv')\n",
+    "cmip5models=pd.read_csv('../cmip5csvinfo.csv')\n",
     "\n",
     "ybegp = 1979 ; monbegp = 1 ; yendp = 2014 ; monendp = 12 # dates for Past period\n",
     "ybegf = 2070 ; monbegf = 1 ; yendf = 2099 ; monendf = 12 # dates for Future period\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,159 @@
      "text": [
       "Processing past for ACCESS1-0 r1i1p1...\n",
       "Processing future for ACCESS1-0 r1i1p1...\n",
-      "Processing past for ACCESS1-3 r1i1p1...\n"
+      "Processing past for ACCESS1-3 r1i1p1...\n",
+      "Processing future for ACCESS1-3 r1i1p1...\n",
+      "Processing past for bcc-csm1-1 r1i1p1...\n",
+      "Processing future for bcc-csm1-1 r1i1p1...\n",
+      "Processing past for bcc-csm1-1-m r1i1p1...\n",
+      "Processing future for bcc-csm1-1-m r1i1p1...\n",
+      "Processing past for BNU-ESM r1i1p1...\n",
+      "Processing future for BNU-ESM r1i1p1...\n",
+      "Processing past for CanESM2 r1i1p1...\n",
+      "Processing past for CanESM2 r2i1p1...\n",
+      "Processing past for CanESM2 r3i1p1...\n",
+      "Processing past for CanESM2 r4i1p1...\n",
+      "Processing past for CanESM2 r5i1p1...\n",
+      "Processing future for CanESM2 r1i1p1...\n",
+      "Processing future for CanESM2 r2i1p1...\n",
+      "Processing future for CanESM2 r3i1p1...\n",
+      "Processing future for CanESM2 r4i1p1...\n",
+      "Processing future for CanESM2 r5i1p1...\n",
+      "Processing past for CCSM4 r1i1p1...\n",
+      "Processing past for CCSM4 r2i1p1...\n",
+      "Processing past for CCSM4 r3i1p1...\n",
+      "Processing past for CCSM4 r4i1p1...\n",
+      "Processing past for CCSM4 r5i1p1...\n",
+      "Processing past for CCSM4 r6i1p1...\n",
+      "Processing future for CCSM4 r1i1p1...\n",
+      "Processing future for CCSM4 r2i1p1...\n",
+      "Processing future for CCSM4 r3i1p1...\n",
+      "Processing future for CCSM4 r4i1p1...\n",
+      "Processing future for CCSM4 r5i1p1...\n",
+      "Processing future for CCSM4 r6i1p1...\n",
+      "Processing past for CESM1-BGC r1i1p1...\n",
+      "Processing future for CESM1-BGC r1i1p1...\n",
+      "Processing past for CESM1-CAM5 r1i1p1...\n",
+      "Processing past for CESM1-CAM5 r2i1p1...\n",
+      "Processing past for CESM1-CAM5 r3i1p1...\n",
+      "Processing future for CESM1-CAM5 r1i1p1...\n",
+      "Processing future for CESM1-CAM5 r2i1p1...\n",
+      "Processing future for CESM1-CAM5 r3i1p1...\n",
+      "Processing past for CESM1-WACCM r2i1p1...\n",
+      "Processing future for CESM1-WACCM r2i1p1...\n",
+      "Processing past for CMCC-CM r1i1p1...\n",
+      "Processing future for CMCC-CM r1i1p1...\n",
+      "Processing past for CMCC-CMS r1i1p1...\n",
+      "Processing future for CMCC-CMS r1i1p1...\n",
+      "Processing past for CNRM-CM5 r1i1p1...\n",
+      "Processing past for CNRM-CM5 r2i1p1...\n",
+      "Processing past for CNRM-CM5 r4i1p1...\n",
+      "Processing past for CNRM-CM5 r6i1p1...\n",
+      "Processing past for CNRM-CM5 r10i1p1...\n",
+      "Processing future for CNRM-CM5 r1i1p1...\n",
+      "Processing future for CNRM-CM5 r2i1p1...\n",
+      "Processing future for CNRM-CM5 r4i1p1...\n",
+      "Processing future for CNRM-CM5 r6i1p1...\n",
+      "Processing future for CNRM-CM5 r10i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r1i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r2i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r3i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r4i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r5i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r6i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r7i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r8i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r9i1p1...\n",
+      "Processing past for CSIRO-Mk3-6-0 r10i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r1i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r2i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r3i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r4i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r5i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r6i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r7i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r8i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r9i1p1...\n",
+      "Processing future for CSIRO-Mk3-6-0 r10i1p1...\n",
+      "Processing past for EC-EARTH r8i1p1...\n",
+      "Processing future for EC-EARTH r8i1p1...\n",
+      "Processing past for FGOALS-g2 r1i1p1...\n",
+      "Processing future for FGOALS-g2 r1i1p1...\n",
+      "Processing past for FIO-ESM r1i1p1...\n",
+      "Processing past for FIO-ESM r2i1p1...\n",
+      "Processing past for FIO-ESM r3i1p1...\n",
+      "Processing future for FIO-ESM r1i1p1...\n",
+      "Processing future for FIO-ESM r2i1p1...\n",
+      "Processing future for FIO-ESM r3i1p1...\n",
+      "Processing past for GFDL-CM3 r1i1p1...\n",
+      "Processing future for GFDL-CM3 r1i1p1...\n",
+      "Processing past for GFDL-ESM2G r1i1p1...\n",
+      "Processing future for GFDL-ESM2G r1i1p1...\n",
+      "Processing past for GFDL-ESM2M r1i1p1...\n",
+      "Processing future for GFDL-ESM2M r1i1p1...\n",
+      "Processing past for GISS-E2-H r1i1p1...\n",
+      "Processing past for GISS-E2-H r2i1p1...\n",
+      "Processing future for GISS-E2-H r1i1p1...\n",
+      "Processing future for GISS-E2-H r2i1p1...\n",
+      "Processing past for GISS-E2-R r1i1p1...\n",
+      "Processing past for GISS-E2-R r2i1p1...\n",
+      "Processing future for GISS-E2-R r1i1p1...\n",
+      "Processing future for GISS-E2-R r2i1p1...\n",
+      "Processing past for HadGEM2-AO r1i1p1...\n",
+      "Processing future for HadGEM2-AO r1i1p1...\n",
+      "Processing past for HadGEM2-CC r1i1p1...\n",
+      "switching to the assumption that historical ends at 2005-11\n",
+      "Processing past for HadGEM2-CC r2i1p1...\n",
+      "Processing past for HadGEM2-CC r3i1p1...\n",
+      "Processing future for HadGEM2-CC r1i1p1...\n",
+      "Processing future for HadGEM2-CC r2i1p1...\n",
+      "Processing future for HadGEM2-CC r3i1p1...\n",
+      "Processing past for HadGEM2-ES r1i1p1...\n",
+      "switching to the assumption that historical ends at 2005-11\n",
+      "Processing past for HadGEM2-ES r2i1p1...\n",
+      "Processing past for HadGEM2-ES r3i1p1...\n",
+      "Processing future for HadGEM2-ES r1i1p1...\n",
+      "Processing future for HadGEM2-ES r2i1p1...\n",
+      "Processing future for HadGEM2-ES r3i1p1...\n",
+      "Processing past for inmcm4 r1i1p1...\n",
+      "Processing future for inmcm4 r1i1p1...\n",
+      "Processing past for IPSL-CM5A-LR r1i1p1...\n",
+      "Processing past for IPSL-CM5A-LR r2i1p1...\n",
+      "Processing past for IPSL-CM5A-LR r3i1p1...\n",
+      "Processing past for IPSL-CM5A-LR r4i1p1...\n",
+      "Processing future for IPSL-CM5A-LR r1i1p1...\n",
+      "Processing future for IPSL-CM5A-LR r2i1p1...\n",
+      "Processing future for IPSL-CM5A-LR r3i1p1...\n",
+      "Processing future for IPSL-CM5A-LR r4i1p1...\n",
+      "Processing past for IPSL-CM5A-MR r1i1p1...\n",
+      "Processing future for IPSL-CM5A-MR r1i1p1...\n",
+      "Processing past for IPSL-CM5B-LR r1i1p1...\n",
+      "Processing future for IPSL-CM5B-LR r1i1p1...\n",
+      "Processing past for MIROC5 r1i1p1...\n",
+      "Processing past for MIROC5 r2i1p1...\n",
+      "Processing past for MIROC5 r3i1p1...\n",
+      "Processing future for MIROC5 r1i1p1...\n",
+      "Processing future for MIROC5 r2i1p1...\n",
+      "Processing future for MIROC5 r3i1p1...\n",
+      "Processing past for MIROC-ESM r1i1p1...\n",
+      "Processing future for MIROC-ESM r1i1p1...\n",
+      "Processing past for MIROC-ESM-CHEM r1i1p1...\n",
+      "Processing future for MIROC-ESM-CHEM r1i1p1...\n",
+      "Processing past for MPI-ESM-LR r1i1p1...\n",
+      "Processing past for MPI-ESM-LR r2i1p1...\n",
+      "Processing past for MPI-ESM-LR r3i1p1...\n",
+      "Processing future for MPI-ESM-LR r1i1p1...\n",
+      "Processing future for MPI-ESM-LR r2i1p1...\n",
+      "Processing future for MPI-ESM-LR r3i1p1...\n",
+      "Processing past for MPI-ESM-MR r1i1p1...\n",
+      "Processing future for MPI-ESM-MR r1i1p1...\n",
+      "Processing past for MRI-CGCM3 r1i1p1...\n",
+      "Processing future for MRI-CGCM3 r1i1p1...\n",
+      "Processing past for NorESM1-M r1i1p1...\n",
+      "Processing future for NorESM1-M r1i1p1...\n",
+      "Processing past for NorESM1-ME r1i1p1...\n",
+      "Processing future for NorESM1-ME r1i1p1...\n",
+      "*********************DONE***********************\n"
      ]
     }
    ],
@@ -128,7 +280,7 @@
     "        # check if a special order is needed\n",
     "        changeorder=cmip5models.loc[index,\"specialorderpast\"]\n",
     "        if (type(changeorder) == str):\n",
-    "            changeorder=np.array(changeorder.split(\",\"))\n",
+    "            changeordernp=np.array(changeorder.split(\",\"))\n",
     "            memstr=\"r\"+str(changeordernp[imem-1])+\"i1p1\"\n",
     "            \n",
     "        print(\"Processing past for \"+modname+\" \"+memstr+\"...\")\n",
