fixing inconsistency in error calculation method

--- a/ERRORCALC/JLAT/errorcalc_cmip6.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_cmip6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,42 +82,7 @@
      "text": [
       "ACCESS-CM2\n",
       "ACCESS-ESM1-5\n",
-      "AWI-CM-1-1-MR\n",
-      "BCC-CSM2-MR\n",
-      "CAMS-CSM1-0\n",
-      "CanESM5\n",
-      "CanESM5-CanOE\n",
-      "CESM2\n",
-      "CESM2-WACCM\n",
-      "CIESM\n",
-      "CMCC-CM2-SR5\n",
-      "CNRM-CM6-1\n",
-      "CNRM-CM6-1-HR\n",
-      "CNRM-ESM2-1\n",
-      "EC-Earth3\n",
-      "EC-Earth3-Veg\n",
-      "FGOALS-f3-L\n",
-      "FGOALS-g3\n",
-      "FIO-ESM-2-0\n",
-      "GFDL-CM4\n",
-      "GFDL-ESM4\n",
-      "GISS-E2-1-G\n",
-      "HadGEM3-GC31-LL\n",
-      "HadGEM3-GC31-MM\n",
-      "INM-CM4-8\n",
-      "INM-CM5-0\n",
-      "IPSL-CM6A-LR\n",
-      "KACE-1-0-G\n",
-      "MCM-UA-1-0\n",
-      "MIROC6\n",
-      "MIROC-ES2L\n",
-      "MPI-ESM1-2-HR\n",
-      "MPI-ESM1-2-LR\n",
-      "MRI-ESM2-0\n",
-      "NESM3\n",
-      "NorESM2-LM\n",
-      "NorESM2-MM\n",
-      "UKESM1-0-LL\n"
+      "AWI-CM-1-1-MR\n"
      ]
     }
    ],
@@ -168,20 +133,37 @@
     "    jlatdif_GFDL = jlat_GFDL_f - jlat_GFDL_p\n",
     "    jlatdif_MPI = jlat_MPI_f - jlat_MPI_p\n",
     "\n",
-    "    result = np.corrcoef(jlat_CanESM2_p, jlatdif_CanESM2)\n",
-    "    rxy_CanESM2 = result[0,1]\n",
-    "    result = np.corrcoef(jlat_CESM_p, jlatdif_CESM)\n",
-    "    rxy_CESM = result[0,1]\n",
-    "    result = np.corrcoef(jlat_CSIRO_p, jlatdif_CSIRO)\n",
-    "    rxy_CSIRO = result[0,1]\n",
-    "    result = np.corrcoef(jlat_GFDL_p, jlatdif_GFDL)\n",
-    "    rxy_GFDL = result[0,1]\n",
-    "    result = np.corrcoef(jlat_MPI_p, jlatdif_MPI)\n",
-    "    rxy_MPI = result[0,1]\n",
+    "    jlatdifm_CanESM2 = np.mean(jlatdif_CanESM2)\n",
+    "    jlatdifm_CESM = np.mean(jlatdif_CESM)\n",
+    "    jlatdifm_CSIRO = np.mean(jlatdif_CSIRO)\n",
+    "    jlatdifm_GFDL = np.mean(jlatdif_GFDL)\n",
+    "    jlatdifm_MPI = np.mean(jlatdif_MPI)\n",
     "    \n",
-    "    sigx[index] = (np.std(jlat_CanESM2_p) + np.std(jlat_CESM_p) + np.std(jlat_CSIRO_p) + np.std(jlat_GFDL_p) + np.std(jlat_MPI_p))/5.\n",
-    "    sigy[index] = (np.std(jlatdif_CanESM2) + np.std(jlatdif_CESM) + np.std(jlatdif_CSIRO)+ np.std(jlatdif_GFDL) +  np.std(jlatdif_MPI))/5.\n",
-    "    rxy[index] = (rxy_CanESM2 + rxy_CESM + rxy_CSIRO + rxy_GFDL + rxy_MPI)/5."
+    "    jlat_CanESM2_pm = np.mean(jlat_CanESM2_p)\n",
+    "    jlat_CESM_pm = np.mean(jlat_CESM_p)\n",
+    "    jlat_CSIRO_pm = np.mean(jlat_CSIRO_p)\n",
+    "    jlat_GFDL_pm = np.mean(jlat_GFDL_p)\n",
+    "    jlat_MPI_pm = np.mean(jlat_MPI_p)\n",
+    "    \n",
+    "    jlatdif_CanESM2[:] = jlatdif_CanESM2[:] - jlatdifm_CanESM2\n",
+    "    jlatdif_CESM[:] = jlatdif_CESM[:] - jlatdifm_CESM\n",
+    "    jlatdif_CSIRO[:] = jlatdif_CSIRO[:] - jlatdifm_CSIRO\n",
+    "    jlatdif_GFDL[:] = jlatdif_GFDL[:] - jlatdifm_GFDL\n",
+    "    jlatdif_MPI[:] = jlatdif_MPI[:] - jlatdifm_MPI\n",
+    "    \n",
+    "    jlat_CanESM2_p[:] = jlat_CanESM2_p[:] - jlat_CanESM2_pm\n",
+    "    jlat_CESM_p[:] = jlat_CESM_p[:] - jlat_CESM_pm\n",
+    "    jlat_CSIRO_p[:] = jlat_CSIRO_p[:] - jlat_CSIRO_pm\n",
+    "    jlat_GFDL_p[:] = jlat_GFDL_p[:] - jlat_GFDL_pm\n",
+    "    jlat_MPI_p[:] = jlat_MPI_p[:] - jlat_MPI_pm\n",
+    "    \n",
+    "    jlatdifconcat = np.concatenate((jlatdif_CanESM2, jlatdif_CESM, jlatdif_CSIRO, jlatdif_GFDL, jlatdif_MPI))\n",
+    "    jlatpconcat = np.concatenate((jlat_CanESM2_p, jlat_CESM_p, jlat_CSIRO_p, jlat_GFDL_p, jlat_MPI_p))\n",
+    "\n",
+    "    result = np.corrcoef(jlatpconcat, jlatdifconcat)\n",
+    "    rxy[index] = result[0,1]\n",
+    "    sigx[index] = np.std(jlatpconcat)\n",
+    "    sigy[index] = np.std(jlatdifconcat)   "
    ]
   },
   {
