making fig2 save the figure to png

--- a/FIGURE_SCRIPTS/fig_2.ipynb
+++ b/FIGURE_SCRIPTS/fig_2.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -254,11 +254,30 @@
     "axs[2].text(-4.5,1.5,varexplainedstr+\"% variance explained\", horizontalalignment='center', verticalalignment='center', fontsize=15, color='black')\n",
     "\n",
     "fig.legend(legendparts, legendlabels, bbox_to_anchor = (0.91, 0.02), ncol=9, frameon = False, fontsize='x-large')\n",
-    "plt.show()\n",
-    "\n",
+    "#plt.show()\n",
+    "plt.savefig('fig2.png', facecolor='white', bbox_inches='tight')\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.savefig('fig2.png')"
    ]
   },
   {
